--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "test": "jest"
   },
   "dependencies": {
+    "gl-react": "^2.2.10",
+    "gl-react-native": "2.42.1",
     "mobx": "^3.1.5",
     "mobx-react": "^4.1.3",
     "react": "15.4.2",
-    "react-native": "0.42.0",
+    "react-native": "0.40.0",
     "react-native-vector-icons": "^4.0.0"
   },
   "devDependencies": {
