--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "mobx-react": "^4.1.3",
     "react": "15.4.2",
     "react-native": "0.40.0",
-    "react-native-vector-icons": "^4.0.0"
+    "react-native-vector-icons": "^4.0.0",
+    "react-navigation": "^1.0.0-beta.7"
   },
   "devDependencies": {
     "babel-jest": "19.0.0",
